# PathMe-Viewer

./: .bumpversion.cfg  .coveragerc  .travis.yml  AUTHORS.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  manager.rst  models.rst
src/pathme_viewer/: __init__.py  __main__.py  cli.py  constants.py  graph_utils.py  load_db.py  manager.py  models.py
src/pathme_viewer/static/css/: graph.css  legend.css  slider.css
src/pathme_viewer/static/js/: home_controller.js  pathway_controller.js
src/pathme_viewer/static/js/d3-force-reused/: manyBodyReuse.js
src/pathme_viewer/static/js/inspire-tree/: inspire-tree-bundled.js
src/pathme_viewer/static/js/svg_to_png/: saveSvgAsPng.js
src/pathme_viewer/templates/: base.html  home.html  pathme.html  pathme_nav.html  pathme_viewer.html  pathway_overlap.html  pathway_table.html  pathway_viewer.html
src/pathme_viewer/templates/dependencies/: graph_css.html  graph_js.html  venn.html
src/pathme_viewer/templates/meta/: about.html  help.html  macros.html  pathme_footer.html
src/pathme_viewer/web/: views.py  web.py
tests/: test_utils.py
