##########################
# Setup.py Configuration #
##########################
[metadata]
name = pathme_viewer
version = 0.0.11-dev
description = A plugin for PathMe that allows to explore overlaps across pathway databases
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/PathwayMerger/PathMe-Viewer
download_url = https://pypi.org/project/pathme-viewer/
project_urls =
    Bug Tracker = https://github.com/PathwayMerger/PathMe-Viewer/issues
    Source Code = https://github.com/PathwayMerger/PathMe-Viewer
    Documentation = https://pathme-viewer.readthedocs.io/en/latest/

# Author information
author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Pathway Databases
    Systems Biology
    Networks Biology
    Biological Expression Language

[options]
install_requires =
    click==7.0
    flask_wtf==0.14.2
    flask==1.0.2
    flask-bootstrap==3.3.7.1
    flask_admin==1.5.3
    flask_security==3.0.0
    flask_sqlalchemy==2.3.2
    sqlalchemy==1.3.3
    pandas==0.24.2
    tqdm==4.31.1
    numpy==1.16.3
    tqdm==4.28.1
    compath
    rdflib==4.2.2
    rdflib-jsonld==0.4.0
    requests==2.21.0
    bio2bel==0.2.1
    bio2bel_hgnc==0.2.2
    bio2bel_chebi==0.2.1
    bio2bel_kegg==0.2.3
    bio2bel_wikipathways==0.2.2
    bio2bel_reactome==0.2.3
    pybel==0.13.1
    pybel-tools==0.7.2
    pathme

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

web =
    flask
    flask_admin

[options.entry_points]
console_scripts =
    pathme_viewer = pathme_viewer.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pathme_viewer

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
